
    This bug is not normally seen as convolution is normally applied only
    to fully-opaque images. And using a zero-summing kernel on a image with
    alpha also results in a transparent image!  This is why it was not fixed
    up until now.

2012-04-08  6.7.6-6 Cristy  <quetzlzacatenango@image...>
  * Pixel allocation for Pango is stride*rows not stride*columns.

2012-04-07  6.7.6-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-5, SVN revision 7483.

2012-04-06  6.7.6-5 Cristy  <quetzlzacatenango@image...>
  * Avoid fault in SetCacheAlphaChannel() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20681).
  * Don't assume EXIF orientation tag is 2 bytes.

2012-04-04  6.7.6-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-4, SVN revision 7356.

2012-04-01  6.7.6-4 Cristy  <quetzlzacatenango@image...>
  * Properly set the XCF alpha channel values (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20642).
  * Support 'orientation' property (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=20650).
  * The default RGB colorspace transform is now linear (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?p=82839#p82839).
  * Prevent EXIF integer overflow (CVE-2012-1610).

2012-03-30  6.7.6-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-3, SVN revision 7290.

2012-03-29  6.7.6-3 Cristy  <quetzlzacatenango@image...>
  * Don't copy invalid memory when reading TIFF EXIF IFD (CERT-FI case 634116,
    CVE-2012-1798).
  * Bail if we receive excessive JPEG warnings (CERT-FI case 634117,
    CVE-2012-0260).
  * Properly initialize EXIF buffers to prevent JPEG EXIF tag crash (CERT-FI
    case 634118, CVE-2012-0259).

2012-03-28  6.7.6-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-2, SVN revision 7245.

2012-03-26  6.7.6-2 Anthony Thyssen <A.Thyssen@griffith...>